# Pixal3D

./: .gitattributes  .gitignore  AGENTS.md  COMPLETION_SUMMARY.md  DIFFUSION_PARAMETER_TUNING.md  MESH_AND_PARAMETER_OPTIMIZATION_SUMMARY.md  MESH_OPTIMIZATION_RESEARCH.md  QUICK_REFERENCE.md  README.md  RUNTIME_FALLBACK_POLICY.md  adapter_policy_runtime.py  api_payload_utils.py  app.py  app_bak.py  app_local.py  app_proxy.py  autotune_cache.json  generation_run_manifest.py  index.html  index_bak.html  pyproject.toml  requirements.txt  requirements_th211_cu130.txt  requirements_th26_cu124.txt  requirements_th28_cu128.txt  runtime_policy.py  space_bootstrap.py  space_runtime.py
.cursor/plans/: pixal3d_space_recovery_5b65d5a8.plan.md
.github/workflows/: python-ci.yml  release.yml  sync-hf-space.yml
.history/: COMPLETION_SUMMARY_20260515153727.md  GUI_TOOLTIPS_DOCUMENTATION_20260515153307.md  GUI_TOOLTIPS_DOCUMENTATION_20260515153429.md  IMPLEMENTATION_ROADMAP_20260515152948.md  MESH_AND_PARAMETER_OPTIMIZATION_SUMMARY_20260515153429.md  MESH_OPTIMIZATION_RESEARCH_20260515153429.md  MESH_SIMPLIFICATION_IMPLEMENTATION_20260515152752.md  MESH_SIMPLIFICATION_IMPLEMENTATION_20260515153430.md  USER_GUIDE_TOOLTIPS_AND_OPTIMIZATION_20260515153429.md  USER_GUIDE_TOOLTIPS_AND_OPTIMIZATION_20260515153433.md  index_20260515153110.html  index_20260515153218.html  index_20260515153233.html  index_20260515153428.html
assets/example_texturing/: the_forgotten_knight.ply
docs/: SPACE_RECOVERY.md  post-recovery.md  workflow-hygiene.md
docs/adapters/: README.md  policy.example.json
docs/gate-results/: README.md  example.json
docs/generation-manifests/: README.md  example.json
docs/generation-runs/: README.md  example.json
docs/plans/: 2026-05-23-001-feat-space-frontend-e2e-plan.md  2026-05-23-002-feat-space-live-e2e-verify-plan.md  2026-05-23-003-fix-zerogpu-quota-budget-plan.md  2026-05-23-004-feat-space-generate-e2e-plan.md  2026-05-23-005-feat-space-live-e2e-finalize-plan.md  2026-05-23-006-fix-pr-ci-lint-plan.md  2026-05-23-007-ship-pr1-signin-cta-plan.md  2026-05-23-008-fix-export-profile-default-plan.md  2026-05-23-009-fix-pr2-merge-conflict-plan.md  2026-05-23-010-feat-runtime-budget-hint-plan.md  2026-05-23-011-feat-cpu-zerogpu-transition-plan.md  2026-05-24-012-feat-ready-endpoint-ui-plan.md  2026-05-24-013-fix-zerogpu-cold-runtime-copy-plan.md  2026-05-24-014-feat-zerogpu-fast-poll-signin-plan.md  2026-05-24-015-fix-gpu-abort-ux-plan.md  2026-05-24-016-feat-space-smoke-script-plan.md  2026-05-24-017-feat-ci-space-smoke-sync-plan.md  2026-05-24-018-feat-hf-auto-sync-smoke-plan.md  2026-05-24-019-fix-readme-automation-docs-plan.md  2026-05-24-020-feat-space-smoke-zerogpu-generate-plan.md  2026-05-24-021-feat-github-hf-parity-check-plan.md  2026-05-24-022-feat-ci-repo-parity-warning-plan.md  2026-05-24-023-feat-smoke-generate-bootstrap-plan.md  2026-05-24-024-feat-zerogpu-512-resolution-default-plan.md  (+55 more)
scripts/: agent_gate.sh  browser_glb_smoke.sh  check_adapter_policy.py  check_repo_parity.py  check_workflow_yaml.py  ensure_hf_space.py  pre_ship.sh  resolve_hf_space_config.py  smoke-requirements.txt  space_smoke.py  validate_adapter_policy.py  validate_gate_json.py  validate_generation_manifest.py  validate_generation_run_json.py  verify_hosted_space.sh  workflow_hygiene.sh
tests/: test_bootstrap_config.py  test_hf_space_config.py  test_model_resolution.py  test_runtime_policy.py  test_space_health.py
tmp_browser_verify/: viewer.html
(+43 files in other folders)
