[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imageezgen3d"
version = "0.1.0"
description = "A Pixal3D-derived image-to-3D workspace focused on reliable Hugging Face and local hardware execution."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "ImageEZGen3D contributors" }]
keywords = [
  "image-to-3d",
  "gradio",
  "hugging-face-spaces",
  "zerogpu",
  "pixal3d",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "accelerate==1.13.0",
  "diffusers==0.37.1",
  "easydict==1.13",
  "einops==0.8.2",
  "gradio==6.14.0",
  "imageio==2.37.2",
  "imageio-ffmpeg==0.6.0",
  "kornia==0.8.2",
  "opencv-python-headless==4.12.0.88",
  "pillow==12.0.0",
  "plyfile==1.1.3",
  "spaces==0.50.2",
  "timm==1.0.22",
  "tqdm==4.67.1",
  "transformers==4.57.3",
  "trimesh==4.10.1",
  "zstandard==0.25.0",
  "moge @ git+https://github.com/microsoft/MoGe.git",
]

[project.optional-dependencies]
dev = ["coverage[toml]>=7.6,<8", "pytest>=8,<9"]

[tool.setuptools.packages.find]
include = ["trellis2*"]
exclude = ["assets*", "tests*"]

[tool.coverage.run]
branch = true
source = [
  "app",
  "api_payload_utils",
  "space_bootstrap",
  "space_runtime",
  "trellis2",
]

[tool.coverage.report]
omit = ["app_bak.py", "app_local.py", "app_proxy.py"]

[tool.mypy]
python_version = "3.12"
files = [
  "app.py",
  "api_payload_utils.py",
  "space_bootstrap.py",
  "space_runtime.py",
]
ignore_missing_imports = true
exclude = "(^\\.history/|^\\.venv/|^node_modules/|^tmp/|^assets/)"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [".history", ".venv", "node_modules", "tmp", "assets"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.imageezgen3d]
workspace_name = "ImageEZGen3D"
upstream_project = "TencentARC/Pixal3D-T"
space_entrypoint = "app.py"
space_frontend = "index.html"

[tool.imageezgen3d.intent]
summary = "ImageEZGen3D is aiming to be a reliable image-to-3D workspace scaffold before it becomes a heavy model integration project."
principles = [
  "prefer a ZeroGPU-first Gradio workflow when the environment supports it",
  "follow the active ZeroGPU, GPU, or CPU hardware directly instead of browser-managed fallback layers",
  "keep local development viable without CUDA, model weights, or native build friction",
  "keep every generation run inspectable through manifests, reports, and retained outputs",
  "validate inputs and exported artifacts before claiming success",
  "gate heavy adapters behind license, dependency, and runtime checks instead of enabling them early",
]

[tool.imageezgen3d.runtime_profiles.space_zerogpu]
requirements_file = "requirements.txt"
python = "3.12"
role = "Hosted Hugging Face ZeroGPU primary profile"

[tool.imageezgen3d.runtime_profiles.local_cuda_13]
requirements_file = "requirements_th211_cu130.txt"
python = "3.12"
role = "Local CUDA 13.0 / torch 2.11 profile"

[tool.imageezgen3d.runtime_profiles.local_cuda_12_8]
requirements_file = "requirements_th28_cu128.txt"
python = "3.10"
role = "Local CUDA 12.8 / torch 2.8 profile"

[tool.imageezgen3d.runtime_profiles.local_cuda_12_4]
requirements_file = "requirements_th26_cu124.txt"
python = "3.10"
role = "Local CUDA 12.4 / torch 2.6 profile"
